<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="85dp"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="85dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/buttonCallActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_general"
                android:layout_weight="1"
                android:background="@drawable/button_back_trans"
                android:padding="@dimen/padding_general"
                android:src="@mipmap/activity_icon" />

            <ImageButton
                android:id="@+id/buttonVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_general"
                android:layout_weight="1"
                android:background="@drawable/button_back_trans"
                android:padding="@dimen/padding_general"
                android:src="@mipmap/reports_icon" />

            <ImageButton
                android:id="@+id/buttonSeniors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_general"
                android:layout_weight="1"
                android:background="@drawable/button_back_trans"
                android:padding="@dimen/padding_general"
                android:src="@mipmap/heart_icon" />

            <ImageButton
                android:id="@+id/buttonNotifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_general"
                android:layout_weight="1"
                android:background="@drawable/button_back_trans"
                android:padding="@dimen/padding_general"
                android:src="@mipmap/notifications_icon" />

            <ImageButton
                android:id="@+id/buttonAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_general"
                android:layout_weight="1"
                android:background="@drawable/button_back_trans"
                android:padding="@dimen/padding_general"
                android:src="@mipmap/person_icon" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="15dp">

            <TextView
                android:id="@+id/textViewActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/menu_activities"
                android:textSize="9sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/menu_reports"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/textViewSeniors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/menu_seniors"
                android:textColor="@color/colorHeaderGradientStart"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/textViewNotifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/menu_notification"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/textViewAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/menu_account"
                android:textSize="9sp" />

        </TableRow>

    </TableLayout>

</RelativeLayout>

