<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_header_blue"
    tools:context="com.hdfc.caretaker.AccountSuccessActivity">

    <ImageView
        android:id="@+id/imageBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:scaleType="fitXY" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="@dimen/margin_general"
        android:background="@drawable/button_blue"
        android:onClick="goToDashboard"
        android:text="@string/view_dashboard"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/textViewMess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:text="@string/account_success_message"
        android:textAlignment="center"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewMess"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:text="@string/account_success_header"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewHeader"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/tick" />
</RelativeLayout>
