<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_gradient"
        android:gravity="center"
        android:padding="10dp"
        android:scaleType="center"
        android:text="Change Password"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorWhite" />

    <EditText
        android:id="@+id/editOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/edit_text_margin"
        android:layout_marginRight="@dimen/edit_text_margin"
        android:layout_marginTop="25dp"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="5dp"
        android:ems="15"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/edit_text_margin"
        android:layout_marginRight="@dimen/edit_text_margin"
        android:layout_marginTop="25dp"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="5dp"
        android:ems="15"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <EditText
        android:id="@+id/editConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/edit_text_margin"
        android:layout_marginRight="@dimen/edit_text_margin"
        android:layout_marginTop="25dp"
        android:drawableLeft="@drawable/re_password"
        android:drawablePadding="5dp"
        android:ems="15"
        android:hint="@string/verify_password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/btndialogOk"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_blue_white_border"
        android:gravity="center"
        android:text="Ok"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/btndialogCancel"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_blue_white_border"
        android:gravity="center"
        android:text="Cancel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorWhite" />
    </LinearLayout>
</LinearLayout>